k8s/argo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-ui
  namespace: argo
  labels:
    k8s-app: argo
    part-of: argo
spec:
  ports:
  - port: 80
    targetPort: 8001
  selector:
    app: argo-ui
