k8s/argo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    k8s-app: argo
    part-of: argo
spec:
  rules:
    - host: argo.k8s-local.io
      http:
        paths:
          - path: /
            backend:
              serviceName: argo-ui
              servicePort: 80
